Add sweet alerts and other improvements. Start register method.

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -40,7 +40,7 @@
 
                             <h4>Create Account</h4>
                             <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
-                            <form class="pt-3" action="/register" method="post">
+                            <form id="register-form" class="pt-3" action="/register" method="post">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -70,7 +70,7 @@
                                         <div class="form-group">
                                             <label for="phoneNumber" class="required">Phone Number</label>
 
-                                            <input type="tel" id="phoneNumber" name="phoneNumber" class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX" required autofocus pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
+                                            <input type="tel" id="phoneNumber" name="phoneNumber" class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX" required autofocus />
                                         </div>
                                         <div class="form-group">
                                             <label for="dateOfBirth" class="required">Date Of Birth</label>
