--- a/views/register.ejs
+++ b/views/register.ejs
@@ -84,24 +84,26 @@
 
                                             <input type="text" id="city" name="city" class="form-control form-control-lg" placeholder="City" required autofocus />
                                         </div>
+                                        <div class="form-group">
+                                            <label for="carBrand" class="sr-only">Car Brand</label>
 
+                                            <input type="text" id="carBrand" name="brand" class="form-control mb-3 form-control-lg" placeholder="Car Brand" autofocus />
+                                        </div>
                                         <div class="form-group">
                                             <label for="carModel" class="sr-only">Car Model</label>
 
-                                            <input type="text" id="carModel" name="carModel" class="form-control mb-3 form-control-lg" placeholder="Car Model" autofocus />
+                                            <input type="text" id="carModel" name="model" class="form-control mb-3 form-control-lg" placeholder="Car Model" autofocus />
                                         </div>
                                         <div class="form-group">
                                             <label for="carPlate" class="sr-only">Car Plate</label>
 
-                                            <input type="text" id="carPlate" name="carPlate" class="form-control mb-3 form-control-lg" placeholder="Car Plate" autofocus />
+                                            <input type="text" id="carPlate" name="plate" class="form-control mb-3 form-control-lg" placeholder="Car Plate" autofocus />
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="mt-3">
-                                        <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end" type="submit">
-                      Create Account
-                    </button>
+                                        <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end" type="submit">Create Account</button>
                                     </div>
                                 </div>
                             </form>
