--- a/public/css/register.css
+++ b/public/css/register.css
@@ -3,24 +3,69 @@ body {
     display: flex;
     align-items: center;
     background-color: #f5f5f5;
-  }
-  
-  .form-register {
+}
+
+.form-register {
     width: 100%;
     /* max-width: 330px; */
     padding: 15px;
     margin: 0 auto;
-  }
-  
-  .form-register .form-control {
+}
+
+.form-register .form-control {
     position: relative;
     box-sizing: border-box;
     height: auto;
     padding: 10px;
     font-size: 16px;
-  }
-  
-  .form-register input[type="email"] {
+}
+
+.form-register input[type="email"] {
     margin-bottom: -1px;
-  }
-  
+}
+
+
+/* Validate password CSS */
+
+
+/* The message box is shown when the user clicks on the password field */
+
+#message {
+    display: none;
+    /* background: #f1f1f1; */
+    color: #000;
+    position: relative;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+#message p {
+    /* padding: 10px 20px; */
+    font-size: 14px;
+}
+
+
+/* Add a green text color and a checkmark when the requirements are right */
+
+.valid {
+    color: green;
+}
+
+.valid:before {
+    position: relative;
+    left: -35px;
+    /* content: "&#10004;"; */
+}
+
+
+/* Add a red text color and an "x" icon when the requirements are wrong */
+
+.invalid {
+    color: red;
+}
+
+.invalid:before {
+    position: relative;
+    left: -35px;
+    /* content: "&#10006;"; */
+}
