--- a/views/login.ejs
+++ b/views/login.ejs
@@ -74,12 +74,12 @@
             <div class="content-wrapper d-flex align-items-center auth px-0">
                 <div class="row w-100 mx-0">
                     <div class="col-lg-4 mx-auto">
-                        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+                        <div class="auth-form-light text-center py-5 px-4 px-sm-5">
                             <div class="brand-logo">
-                                <img src="/images/logo.svg" alt="logo">
+                                <img src="/images/mrquicks-logo.png" alt="logo">
                             </div>
-                            <h4>Hello! let's get started</h4>
-                            <h6 class="fw-light">Sign in to continue.</h6>
+                            <h4>Login</h4>
+                            <h6 class="fw-light">Mr. Quick's Subscriptions Portal.</h6>
                             <form id="login-form" class="pt-3" action="/login" method="post">
 
                                 <div class="form-group">
@@ -89,7 +89,7 @@
 
                                 <div class="form-group">
 
-                                    <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" placeholder="Password" autofocus />
+                                    <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" placeholder="Password" required autofocus />
                                 </div>
 
                                 <div class="mt-3">
@@ -105,7 +105,7 @@
                       Keep me signed in
                     </label>
                   </div> -->
-                                    <a href="#" class="auth-link text-black">Forgot password?</a>
+                                    <!-- <a href="#" class="auth-link text-black">Forgot password?</a> -->
                                 </div>
 
                                 <div class="text-center mt-4 fw-light">
