--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="../../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="../../css/register.css">
+
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- Plugin css for this page -->
@@ -34,8 +36,8 @@
                             <a class="float-end btn-black" id="close-registration" href="/">
                                 <i class="mdi mdi-close icon-lg"></i>
                             </a>
-                            <div class="brand-logo">
-                                <img src="/images/logo.svg" alt="logo">
+                            <div class="brand-logo text-center">
+                                <img src="/images/mrquicks-logo.png" alt="logo">
                             </div>
 
                             <h4>Create Account</h4>
@@ -52,7 +54,14 @@
                                         <div class="form-group">
                                             <label for="password" class="required">Password</label>
 
-                                            <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" placeholder="Password" autofocus />
+                                            <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                                                placeholder="Password" required autofocus />
+                                            <div id="message">
+                                                <p>Password must contain the following:</p>
+                                                <p> <span id="letter" class="invalid"> <b>1 lowercase letter</b> </span>, <span id="capital" class="invalid"><b>1 capital (uppercase) letter</b></span>, <span id="number" class="invalid"> <b>1 number</b></span>,
+                                                    <span id="length" class="invalid"> <b>8 characters</b></span>
+                                                </p>
+                                            </div>
                                         </div>
 
                                         <div class="form-group">
@@ -131,6 +140,8 @@
     <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="../../js/dashboard.js"></script>
+    <script src="../../js/register.js"></script>
+
     <!-- End custom js for this page-->
 </body>
 
