Fix register CSS. Optimize registration alerts. Add TODOS.

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -42,7 +42,7 @@
 
                             <h4>Create Account</h4>
                             <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
-                            <form id="register-form" class="pt-3" action="/register" method="post">
+                            <form id="form-register" class="pt-3" action="/register" method="post">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -81,13 +81,13 @@
 
                                             <input type="tel" id="phoneNumber" name="phoneNumber" class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX" required autofocus />
                                         </div>
+                                    </div>
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <label for="dateOfBirth" class="required">Date Of Birth</label>
 
                                             <input type="date" id="dateOfBirth" name="dateOfBirth" class="form-control mb-3 form-control-lg" required autofocus />
                                         </div>
-                                    </div>
-                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <label for="city" class="required">City</label>
 
