--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,9 +1,9 @@
-body {
+/* body {
     height: 100vh;
     display: flex;
     align-items: center;
     background-color: #f5f5f5;
-}
+} */
 
 .form-register {
     width: 100%;
