--- a/views/login.ejs
+++ b/views/login.ejs
@@ -84,7 +84,7 @@
 
                                 <div class="form-group">
 
-                                    <input type="email" id="email" name="email" class="form-control form-control-lg" placeholder="Email address" required autofocus />
+                                    <input type="email" id="email" name="email" class="form-control form-control-lg" value="<%= email%>" placeholder="Email address" required autofocus />
                                 </div>
 
                                 <div class="form-group">
