--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1352,6 +1352,12 @@
     <script src="./js/todolist.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
+    <script>
+        var customer = <%- JSON.stringify(customer) %>;
+        console.log(customer);
+    </script>
+    <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
+    <script type="text/javascript" src="./js/account.js"></script>
     <script src="./js/jquery.cookie.js" type="text/javascript"></script>
     <script src="./js/dashboard.js"></script>
     <script src="./js/Chart.roundedBarCharts.js"></script>
