--- a/views/register.ejs
+++ b/views/register.ejs
@@ -47,7 +47,7 @@
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <label class="required" for="email">Email</label>
-                                            <input type="email" id="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" required autofocus />
+                                            <input type="email" id="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" required />
 
                                         </div>
 
@@ -55,7 +55,7 @@
                                             <label for="password" class="required">Password</label>
 
                                             <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                                placeholder="Password" required autofocus />
+                                                placeholder="Password" required />
                                             <div id="message">
                                                 <p>Password must contain the following:</p>
                                                 <p> <span id="letter" class="invalid"> <b>1 lowercase letter</b> </span>, <span id="capital" class="invalid"><b>1 capital (uppercase) letter</b></span>, <span id="number" class="invalid"> <b>1 number</b></span>,
