Change session variable 'email' to 'user'. Use 'email' for inputs. Create new path /dashboards for all dashboards views. Add user session validation for redirect to /account route. Add alertTypes. Create /helper path for place all helper functions and variables. Create location Collection (Model and Service) to manage Locations info. Move all Collections to /collections path. Remove helper.js and create sweet-alerts.js for alerts.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -133,7 +133,7 @@
     <script src="../../js/template.js"></script>
     <script src="../../js/settings.js"></script>
     <script src="../../js/todolist.js"></script>
-    <script type="text/javascript" src="./js/helper.js"></script>
+    <script type="text/javascript" src="./js/sweet-alerts.js"></script>
 
     <!-- endinject -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.3/dist/sweetalert2.all.min.js"></script>
@@ -141,8 +141,11 @@
         $(document).ready(function() {
             var msj = '<%- message %>';
             var alertType = '<%- alertType %>';
-            if (msj !== '' && alertType !== '')
-                simpleAlert(alertType, msj);
+            var allAlertTypes = '<%- allAlertTypes %>';
+
+            if (msj !== '' && alertType !== '') {
+                sweetAlerts(allAlertTypes, alertType, msj);
+            }
         });
     </script>
 </body>
