--- a/views/login.ejs
+++ b/views/login.ejs
@@ -133,10 +133,12 @@
     <script src="../../js/template.js"></script>
     <script src="../../js/settings.js"></script>
     <script src="../../js/todolist.js"></script>
-    <script type="text/javascript" src="./js/sweet-alerts.js"></script>
 
     <!-- endinject -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.3/dist/sweetalert2.all.min.js"></script>
+
+    <!-- Alerts Code -->
+    <script type="text/javascript" src="./js/sweet-alerts.js"></script>
     <script>
         $(document).ready(function() {
             var msj = '<%- message %>';
