--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -183,7 +183,7 @@
                             <h4>Edit User</h4>
                             <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
                             <% if(customer) {%>
-                                <form id="form-register" class="pt-3" action="/edit-user/" method="post">
+                                <form id="form-register" class="pt-3" action="/edit-user/?url=<%- url%>" method="post">
                                     <input type="text" id="id" name="id" value="<%- customer.id%>" hidden />
                                     <div class="row">
                                         <div class="col-lg-6">
@@ -255,7 +255,7 @@
                                     <div class="row">
                                         <div class="mt-3">
 
-                                            <a href="/account" class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
+                                            <a href="/<%- url%>" class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
 
                                             <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end" type="submit">Save</button>
                                         </div>
