--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -29,7 +29,7 @@
 <body class="sidebar-icon-only">
     <div class="container-scroller">
         <!-- partial:partials/_navbar.html -->
-        <%- include('../partials/navbar.ejs'); %>
+        <%- include('../partials/navbar.ejs' , {user, user}); %>
             <!-- partial -->
             <div class="container-fluid page-body-wrapper">
                 <!-- partial:partials/_sidebar.html -->
