--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -29,7 +29,7 @@
 <body class="sidebar-icon-only">
     <div class="container-scroller">
         <!-- partial:partials/_navbar.html -->
-        <%- include('../partials/navbar.ejs'); %>
+        <%- include('../partials/navbar.ejs' , {user, user}); %>
 
             <!-- partial -->
             <div class="container-fluid page-body-wrapper">
@@ -39,7 +39,7 @@
                     <div class="main-panel">
                         <div class="content-wrapper">
                             <h4>View User</h4>
-                            <% if(user) {%>
+                            <% if(customer) {%>
                                 <div class="row text-left">
                                     <div class="col-lg-12 d-flex flex-column">
                                         <div class="row flex-grow">
@@ -48,7 +48,7 @@
                                                     <div class="card-body">
                                                         <div class="table-responsive mt-1">
                                                             <div class="d-sm-flex justify-content-between align-items-start float-end">
-                                                                <a href="/edit-user/<%- user.id%>?url=view-user/<%- user.id%>" data-id="user" type="button" class="btn btn-primary btn-icon-text">
+                                                                <a href="/edit-user/<%- customer.id%>?url=view-user" data-id="user" type="button" class="btn btn-primary btn-icon-text">
                                                                     <i class=" mdi mdi-square-edit-outline"></i> Edit
                                                                 </a>
                                                             </div>
@@ -63,25 +63,25 @@
                                                                     <tr>
                                                                         <td>Email</td>
                                                                         <td>
-                                                                            <%- user.email%>
+                                                                            <%- customer.email%>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td>Name</td>
                                                                         <td>
-                                                                            <%- user.personalInfo.firstName + ' ' + user.personalInfo.lastName %>
+                                                                            <%- customer.personalInfo.firstName + ' ' + customer.personalInfo.lastName %>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td>Phone Number</td>
                                                                         <td>
-                                                                            <%- user.personalInfo.phoneNumber %>
+                                                                            <%- customer.personalInfo.phoneNumber %>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td>Birth Date</td>
                                                                         <td>
-                                                                            <%= moment(user.personalInfo.dateOfBirth).isValid() ? moment(user.personalInfo.dateOfBirth).utc().format(shortDateFormat) : 'N/A' %>
+                                                                            <%= moment(customer.personalInfo.dateOfBirth).isValid() ? moment(customer.personalInfo.dateOfBirth).utc().format(shortDateFormat) : 'N/A' %>
 
                                                                         </td>
                                                                     </tr>
@@ -106,13 +106,13 @@
                                                                     <tr>
                                                                         <td>Plan</td>
                                                                         <td>
-                                                                            <%- user.membershipInfo.plan%>
+                                                                            <%- customer.membershipInfo.plan%>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td>End Date</td>
                                                                         <td>
-                                                                            <%= moment(user.membershipInfo.endDate).isValid() ? moment(user.membershipInfo.endDate).utc().format(shortDateFormat) : 'N/A' %>
+                                                                            <%= moment(customer.membershipInfo.endDate).isValid() ? moment(customer.membershipInfo.endDate).utc().format(shortDateFormat) : 'N/A' %>
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
@@ -136,19 +136,19 @@
                                                                     <tr>
                                                                         <td>Brand</td>
                                                                         <td>
-                                                                            <%- user.carInfo.brand%>
+                                                                            <%- customer.carInfo.brand%>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td>Model</td>
                                                                         <td>
-                                                                            <%- user.carInfo.model%>
+                                                                            <%- customer.carInfo.model%>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
                                                                         <td>Plate</td>
                                                                         <td>
-                                                                            <%- user.carInfo.plate%>
+                                                                            <%- customer.carInfo.plate%>
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
@@ -188,8 +188,8 @@
     <!-- endinject -->
     <!-- Custom js for this page-->
     <script>
-        var user = <%- JSON.stringify(user) %>;
-        console.log(user);
+        var customer = <%- JSON.stringify(customer) %>;
+        console.log(customer);
     </script>
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="../js/account.js"></script>
