--- a/views/login.ejs
+++ b/views/login.ejs
@@ -80,38 +80,49 @@
                             </div>
                             <h4>Login</h4>
                             <h6 class="fw-light">Mr. Quick's Subscriptions Portal.</h6>
-                            <form id="login-form" class="pt-3" action="/login" method="post">
+                            <% if (messages.error) { %>
+                                <p class="error">
+                                    <%= messages.error %>
+                                </p>
+                                <% } %>
 
-                                <div class="form-group">
+                                    <% if (messages.info) { %>
+                                        <p class="info">
+                                            <%= messages.info %>
+                                        </p>
+                                        <% } %>
+                                            <form id="login-form" class="pt-3" action="/login" method="post">
 
-                                    <input type="email" id="email" name="email" class="form-control form-control-lg" value="<%= email%>" placeholder="Email address" required autofocus />
-                                </div>
+                                                <div class="form-group">
 
-                                <div class="form-group">
+                                                    <input type="email" id="email" name="email" class="form-control form-control-lg" value="<%= email%>" placeholder="Email address" required autofocus />
+                                                </div>
 
-                                    <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" placeholder="Password" required autofocus />
-                                </div>
+                                                <div class="form-group">
 
-                                <div class="mt-3">
+                                                    <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" placeholder="Password" required autofocus />
+                                                </div>
 
-                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit">
+                                                <div class="mt-3">
+
+                                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit">
                     Sign in
                   </button>
-                                </div>
-                                <div class="my-2 d-flex justify-content-between align-items-center">
-                                    <!-- <div class="form-check">
+                                                </div>
+                                                <div class="my-2 d-flex justify-content-between align-items-center">
+                                                    <!-- <div class="form-check">
                     <label class="form-check-label text-muted">
                       <input type="checkbox" class="form-check-input">
                       Keep me signed in
                     </label>
                   </div> -->
-                                    <!-- <a href="#" class="auth-link text-black">Forgot password?</a> -->
-                                </div>
+                                                    <!-- <a href="#" class="auth-link text-black">Forgot password?</a> -->
+                                                </div>
 
-                                <div class="text-center mt-4 fw-light">
-                                    Don't have an account? <a href="/create-account" class="text-primary">Create</a>
-                                </div>
-                            </form>
+                                                <div class="text-center mt-4 fw-light">
+                                                    Don't have an account? <a href="/create-account" class="text-primary">Create</a>
+                                                </div>
+                                            </form>
                         </div>
                     </div>
                 </div>
